--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
   <script>
     photomosaic.init('photomosaic', {}, [
       'images/200x400.jpg',
-      //'images/200x400.jpg',
+      'images/200x400.jpg',
       'images/400x250.jpg',
-      //'images/600x200.jpg',
+      'images/600x70.jpg',
       'images/10x10.jpg',
       //'images/600x200.jpg',
+      //'images/600x200.jpg',
+      'images/200x400.jpg',
+      'images/400x250.jpg',
     ])
   </script>
 
