--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       //'images/600x200.jpg',
       //'images/600x200.jpg',
       'images/200x400.jpg',
-      'images/400x250.jpg',
+      //'images/400x250.jpg',
     ])
   </script>
 
